improved data manipulation options

--- a/runtime/pages/page11_correlations.Rmd
+++ b/runtime/pages/page11_correlations.Rmd
@@ -5,7 +5,8 @@ selectInput("par", "Parametric data",
             choices = c("parametric", "nonparametric", "bayes", "robust"), 
             selected = "parametric", multiple = FALSE)
 
-checkboxInput("processData", "Process Data for Conditions", value = TRUE)
+checkboxInput("averageData", "Average data across condition", value = TRUE)
+checkboxInput("diffData", "Calculate difference + means per participant", value = TRUE)
 
 # Add selectors for x and y inputs for the correlation plot
 selectizeInput("xVar", "X Variable for Correlation Plot", choices = muVars, selected = muVars[1], multiple = FALSE)
@@ -32,8 +33,10 @@ verbatimTextOutput("correlation_text")
 ```{r, context="server"}
 get_correlation_data <- reactive({
   data <- get_mu_dyn_long()
-  if (input$processData) {
+  if (input$averageData) {
     data <- summarize_across_conditions(data)
+  }
+  if (input$diffData){
     data <- calculate_vfd_difference(data)
   }
   return(data)
@@ -44,8 +47,8 @@ observe({
   data <- get_correlation_data()
   numeric_cols <- names(data)[sapply(data, is.numeric)]
   
-  updateSelectizeInput(session, "xVar", choices = numeric_cols , selected = ifelse(input$processData, "diff_VEQ.total", "VEQ.total"))
-  updateSelectizeInput(session, "yVar", choices = numeric_cols, selected = ifelse(input$processData, "diff_stepWidths.sd", "stepWidths.sd"))
+  updateSelectizeInput(session, "xVar", choices = numeric_cols , selected = ifelse(input$diffData, "diff_VEQ.total", "VEQ.total"))
+  updateSelectizeInput(session, "yVar", choices = numeric_cols, selected = ifelse(input$diffData, "diff_stepWidths.sd", "stepWidths.sd"))
 })
 
 output$correlation_plot <- renderSVG({ reactive({
