--- a/runtime/pages/page10_statistics.Rmd
+++ b/runtime/pages/page10_statistics.Rmd
@@ -11,7 +11,7 @@ selectizeInput("indepVars", "+ Independent variables", choices = muVars, selecte
 selectizeInput("correctionMethod", "Correction Method", choices = c("bonferroni", "tukey", "holm"), selected = "bonferroni", multiple = FALSE)
 
 # Add a text input for custom model formula
-textInput("customModel", "Custom Model Formula: dependent_variable ~ ", value = "stepWidths.sd ~ VFD * (startedWithNoise + VEQ.total) + trialNumWithinCondition + (1 | participant)")
+textInput("customModel", "Custom Model Formula: dependent_variable ~ ", value = "stepWidths.sd ~ VFD * startedWithNoise + trialNumWithinCondition + (1 | participant)")
 
 # Add a checkbox to use the custom model formula
 checkboxInput("useCustomModel", "Use Custom Model Formula", value = FALSE)
@@ -21,6 +21,10 @@ Use paired t-test instead (handy for questionnaires):
 ```{r}
 # Add a checkbox for paired t-test
 checkboxInput("paired_ttest", "Perform Paired t-test", value = FALSE)
+numericInput("num_tests", 
+             label = "Number of Comparisons:", 
+             value = 1,  # Default value
+             min = 1)  # Minimum value (must be at least one test)
 ```
 
 Further data processing:
@@ -58,31 +62,70 @@ tableOutput("post_hoc_table")
 ```
 
 #### Check Assumptions
+
 ##### QQ Plot  {data-height=500}
+
 - Interpret the Plot: The QQ plot compares the quantiles of the residuals from your model to the quantiles of a normal distribution. If the residuals are normally distributed, the points on the QQ plot will fall approximately along a straight line (the 45-degree reference line).
 - Look for Deviations: Significant deviations from the straight line suggest departures from normality. Small deviations are expected and acceptable, but large deviations or patterns (such as curves or S-shaped patterns) indicate that the residuals are not normally distributed.
 - Use QQ Line: The reference line (QQ line) helps in visualizing the deviation. The closer the points are to this line, the more normally distributed the residuals are.
+
 ```{r}
-plotOutput("qq")
+imageOutput("qq")
 ```
+
 ##### residuals_vs_fitted {data-height=1500}
+
+
 Check for homoscedasticity and non-linearity. Look for a random scatter of residuals around zero.
 
 ```{r}
-plotOutput("residuals_vs_fitted")
+imageOutput("residuals_vs_fitted")
 ```
+
 ##### scale_location {data-height=500}
+
+
 Check for homoscedasticity. Look for a horizontal line with equally spread points.
 
 ```{r}
-plotOutput("scale_location")
+imageOutput("scale_location")
 ```
+
 ##### residuals_vs_leverage {data-height=500}
+
+
 Check for influential cases. Look for any points outside the Cook's distance lines.
 
 ```{r}
-plotOutput("residuals_vs_leverage")
+imageOutput("residuals_vs_leverage")
 ```
+
+### T-Test Extra
+
+#### Check Assumptions
+
+Histogram of Differences
+
+- Look for a roughly symmetric distribution centered around zero. Skewness or multimodal patterns may indicate deviations from normality.
+```{r}
+imageOutput("diff_histogram")
+```
+
+Q-Q Plot of Differences
+
+- Points should fall approximately along the reference line (blue line). Large deviations from the line suggest violations of the normality assumption.
+```{r}
+imageOutput("diff_qqplot")
+```
+
+
+Boxplot of Differences
+
+- Check for outliers, which are typically represented as points outside the whiskers. Extreme outliers can affect the paired t-test's validity and should be carefully assessed.
+```{r}
+imageOutput("diff_boxplot")
+```
+
 
 ```{r, context="server"}
 ############ Getting and setting data
@@ -268,75 +311,6 @@ output$post_hoc_table <- renderTable({
     return(data.frame(Message = "No significant main or interaction effects found."))
   }
 }, rownames = TRUE)
-
-############
-########## T-Test
-output$ttest_text <- renderPrint({
-  data <- get_stats_data()
-
-  dep_var <- input$depVar
-  if (length(input$indepInterVars) > 0) {
-    comparison_col <- input$indepInterVars[1] # Use the first variable in indepInterVars to define the comparison column
-
-    if (length(unique(data[[comparison_col]])) == 2) { # can only do t-test if 2 levels
-      levels <- unique(data[[comparison_col]])
-
-      before <- data[[dep_var]][data[[comparison_col]] == levels[1]]
-      after <- data[[dep_var]][data[[comparison_col]] == levels[2]]
-
-      # Parametric assumption checks for the paired t-test
-      # Check normality of differences
-      diff <- after - before
-      shapiro_test <- shapiro.test(diff)  # Shapiro-Wilk test for normality
-      variance_test <- var.test(before, after)  # Variance homogeneity test (F-test)
-
-      cat("\n--- PARAMETRIC ASSUMPTIONS CHECK:\n\n")
-      cat("Shapiro-Wilk Test for normality of differences:\n")
-      print(shapiro_test)
-      
-      # Interpretation of Shapiro-Wilk test (Normality)
-      if (shapiro_test$p.value > 0.05) {
-        cat("Interpretation: The p-value is", shapiro_test$p.value, 
-            "> 0.05, so we assume the differences are normally distributed.\n")
-      } else {
-        cat("Interpretation: The p-value is", shapiro_test$p.value, 
-            "< 0.05, indicating that the normality assumption is violated.\n")
-      }
-
-      cat("\nF-test for homogeneity of variances:\n")
-      print(variance_test)
-      
-      # Interpretation of F-test (Homogeneity of variances)
-      if (variance_test$p.value > 0.05) {
-        cat("Interpretation: The p-value is", variance_test$p.value, 
-            "> 0.05, so we assume the variances are equal (homogeneity of variances).\n")
-      } else {
-        cat("Interpretation: The p-value is", variance_test$p.value, 
-            "< 0.05, indicating a violation of the homogeneity of variances assumption.\n")
-      }
-
-      # Perform paired t-test
-      t_test_result <- t.test(before, after, paired = TRUE)
-
-      # Print t-test result
-      cat("\n--- T-TEST RESULTS:\n\n")
-      cat("Paired t-test comparing", levels[1], "and", levels[2], "for", dep_var, ":\n")
-      print(t_test_result)
-
-      # Interpretation of T-Test Result
-      if (t_test_result$p.value < 0.05) {
-        cat("Interpretation: The p-value is", t_test_result$p.value, 
-            "< 0.05, indicating a statistically significant difference between", levels[1], "and", levels[2], "for", dep_var, ".\n")
-      } else {
-        cat("Interpretation: The p-value is", t_test_result$p.value, 
-            "> 0.05, indicating no statistically significant difference between", levels[1], "and", levels[2], "for", dep_var, ".\n")
-      }
-    } else {
-      cat("Error: The selected independent variable must have exactly two levels for paired t-test.\n")
-    }
-  }
-})
-
 ###############
 ############## FIGURES
 set_digits <- function(df, digits = 4){
@@ -346,22 +320,22 @@ set_digits <- function(df, digits = 4){
   return(df)
 }
 
-output$qq <- renderPlot({
+output$qq <- renderSVG({ reactive({
   lmm <- get_lmer()
   qqnorm(resid(lmm))
   qqline(resid(lmm))
-}, height = reactive(input$plotheight))
+})})
 
-output$residuals_vs_fitted <- renderPlot({
+output$residuals_vs_fitted <- renderSVG({ reactive({
   lmm <- get_lmer()
   plot(fitted(lmm), resid(lmm), 
        xlab = "Fitted values", 
        ylab = "Residuals",
        main = "Residuals vs Fitted")
   abline(h = 0, col = "red")
-}, height = reactive(input$plotheight))
+}) })
 
-output$scale_location <- renderPlot({
+output$scale_location <- renderSVG({ reactive({
   lmm <- get_lmer()
   sqrt_resid <- sqrt(abs(resid(lmm)))
   plot(fitted(lmm), sqrt_resid,
@@ -369,9 +343,9 @@ output$scale_location <- renderPlot({
        ylab = "Square root of standardized residuals",
        main = "Scale-Location Plot")
   abline(h = 0, col = "red")
-}, height = reactive(input$plotheight))
+}) })
 
-output$residuals_vs_leverage <- renderPlot({
+output$residuals_vs_leverage <- renderSVG({ reactive({
   lmm <- get_lmer()
   leverage <- hatvalues(lmm)
   cooksd <- cooks.distance(lmm)
@@ -385,7 +359,120 @@ output$residuals_vs_leverage <- renderPlot({
   cooksd_line <- 4/(nrow(leverage) - length(coef(lmm)))
   abline(v = cooksd_line, col = "blue", lty = 2)
   abline(v = 2 * cooksd_line, col = "blue", lty = 2)
+}) })
+
+############
+########## T-Test
+get_ttest_diff <- reactive({
+  dt <- get_stats_data()
+  
+  dep_var <- input$depVar
+  if (length(input$indepInterVars) > 0) {
+    comparison_col <- input$indepInterVars[1]  # Use the first variable in indepInterVars to define the comparison column
+    
+    if (length(unique(dt[[comparison_col]])) == 2) {  # Can only do t-test if there are exactly 2 levels
+      levels <- unique(dt[[comparison_col]])
+      before <- dt[[dep_var]][dt[[comparison_col]] == levels[1]]
+      after <- dt[[dep_var]][dt[[comparison_col]] == levels[2]]
+      
+      diff <- after - before
+      
+      # Return all three variables in a list
+      return(diff)
+    }
+  } else {
+    cat("Error: The selected independent variable must have exactly two levels for paired t-test.\n")
+    return(NULL)  # Return NULL if conditions are not met
+  }
 })
+
+output$ttest_text <- renderPrint({
+  dt <- get_stats_data()
+  
+  dep_var <- input$depVar
+  if (length(input$indepInterVars) > 0) {
+    comparison_col <- input$indepInterVars[1]  # Use the first variable in indepInterVars to define the comparison column
+    
+    if (length(unique(dt[[comparison_col]])) == 2) {  # Can only do t-test if there are exactly 2 levels
+      levels <- unique(dt[[comparison_col]])
+      before <- dt[[dep_var]][dt[[comparison_col]] == levels[1]]
+      after <- dt[[dep_var]][dt[[comparison_col]] == levels[2]]
+      
+      diff <- after - before
+      # Parametric assumption checks for the paired t-test
+      # Check normality of differences
+      shapiro_test <- shapiro.test(diff)  # Shapiro-Wilk test for normality
+      variance_test <- var.test(before, after)  # Variance homogeneity test (F-test)
+  
+      cat("\n--- PARAMETRIC ASSUMPTIONS CHECK:\n\n")
+      cat("Shapiro-Wilk Test for normality of differences:\n")
+      print(shapiro_test)
+      
+      # Interpretation of Shapiro-Wilk test (Normality)
+      if (shapiro_test$p.value > 0.05) {
+        cat("Interpretation: The p-value is", shapiro_test$p.value, 
+            "> 0.05, so we assume the differences are normally distributed.\n")
+      } else {
+        cat("Interpretation: The p-value is", shapiro_test$p.value, 
+            "< 0.05, indicating that the normality assumption is violated.\n")
+      }
+      
+      # Test for symmetry of differences (missing assumption)
+      cat("\nCheck for symmetry of differences in plot!!\n")
+      
+      # Additional check: Outliers in differences
+      cat("\nCheck for outliers in differences in plot!!\n")
+      # Perform paired t-test
+      t_test_result <- t.test(before, after, paired = TRUE)
+  
+      # Print t-test result
+      cat("\n--- T-TEST RESULTS:\n\n")
+      #cat("Paired t-test comparing", levels[1], "and", levels[2], "for", dep_var, ":\n")
+      print(t_test_result)
+      corrected_p_value <- t_test_result$p.value * input$num_tests
+      cat("Bonferroni corrected p-value: ",corrected_p_value)
+      
+      # Interpretation of T-Test Result
+      alpha <- 0.05
+      
+      if (corrected_p_value < alpha) {
+        cat("Interpretation: The corrected p-value is", corrected_p_value, 
+            "< 0.05, indicating a statistically significant difference between", levels[1], "and", levels[2], "for", dep_var, ".\n")
+      } else {
+        cat("Interpretation: The corrected p-value is", corrected_p_value, 
+            "> 0.05, indicating no statistically significant difference between", levels[1], "and", levels[2], "for", dep_var, ".\n")
+      }
+  } }
+})
+
+###############
+############## FIGURES
+
+# Output for histogram of differences
+output$diff_histogram <- renderSVG({ reactive({
+  diff <- get_ttest_diff()
+  
+  # Create histogram
+  hist(diff, main = "Histogram of Differences", xlab = "Differences",
+       col = "lightblue", border = "white")
+}) })
+
+# Output for Q-Q plot of differences
+output$diff_qqplot <- renderSVG({ reactive({
+  diff <- get_ttest_diff()
+  
+  # Create Q-Q plot
+  qqnorm(diff, main = "Q-Q Plot of Differences")
+  qqline(diff, col = "blue")
+})})
+
+# Output for boxplot of differences
+output$diff_boxplot <- renderSVG({ reactive({
+  diff <- get_ttest_diff()
+  
+  # Create boxplot
+  boxplot(diff, main = "Boxplot of Differences", ylab = "Differences", col = "lightblue", border = "darkblue")
+}) })
 
 ```
 
