--- a/runtime/pages/page1_feetTrajectories.Rmd
+++ b/runtime/pages/page1_feetTrajectories.Rmd
@@ -13,9 +13,9 @@ selectizeInput("trialNum", "Trial Number",
 
 
 selectizeInput("xplot", "xplot",
-  choices = xOptions, selected = xOptions[2], multiple = FALSE)
+  choices = xOptions, selected = "time", multiple = FALSE)#xOptions[2]
 selectizeInput("yplot", "yplot",
-  choices = xOptions, selected = xOptions[3], multiple = FALSE)
+  choices = xOptions, selected = "pos_z", multiple = FALSE) #xOptions[3]
 
 numericInput("start", "start at step nr",
   min = 0, max = 500, value = 0, step = 1)
